[package]
name = "proc_noprocdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dinvoke_rs = "0.1.2"
sysinfo = "0.29.11"
tokio = { version = "1.35.0", features = ["full"] }
rc4 = "0.1.0"


[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem"
]